--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Anna McDougall</title>
-    <link rel="stylesheet" href="styles/main.css"/>
+    <link rel="stylesheet" href="styles/main.css" id="test" />
   </head>
   <body>
     <header class="fixed-top">
@@ -16,7 +16,7 @@
     </header>
     <main class="mt-5 m-4 pt-4">
       <div class="row p-3">
-        <div class="col-12 col-sm-6 col-md-3">
+        <div class="col-12 col-sm-6 col-md-4">
           <div class="card my-3 border border-primary">
             <div class="card-body d-flex flex-column align-items-center">
               <h3 class="card-title">Career Profiles</h3>
@@ -33,10 +33,17 @@
                 class="btn btn-lg btn-outline-primary m-3"
                 >Xing</a
               >
+              <a
+                href="http://www.annamcdougall.com"
+                target="_new"
+                class="btn btn-lg btn-outline-primary m-3 disabled"
+                >Portfolio Site</a
+              >
+              <sup>(Under Construction)</sup>
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-3">
+        <div class="col-12 col-sm-6 col-md-4">
           <div class="card my-3 border border-primary">
             <div
               class="card-body d-flex flex-column align-items-center text-center"
@@ -49,23 +56,22 @@
                 >GitHub</a
               >
               <a
+                href="https://www.youtube.com/channel/UCjJzKrbr3WGn1xE0LAQ91yA"
+                target="_new"
+                class="btn btn-lg btn-outline-primary m-3"
+                >YouTube Channel</a
+              >
+              <a
                 href="http://blog.annamcdougall.com"
                 target="_new"
                 class="btn btn-lg btn-outline-primary m-3"
                 >Developer Blog</a
               >
-              <a
-                href="http://www.annamcdougall.com"
-                target="_new"
-                class="btn btn-lg btn-outline-primary m-3 disabled"
-                >Portfolio Site</a
-              >
-              <sup>(Under Construction)</sup>
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-sm-6 col-md-3">
+        <div class="col-12 col-sm-6 col-md-4">
           <div class="card my-3 border border-primary">
             <div class="card-body d-flex flex-column align-items-center">
               <h3 class="card-title">Social Media</h3>
@@ -75,36 +81,12 @@
                 class="btn btn-lg btn-outline-primary m-3"
                 >Twitter</a
               >
+
               <a
                 href="http://www.twitter.com/AnnaJMcDougall"
                 target="_new"
                 class="btn btn-lg btn-outline-primary m-3"
                 >Instagram</a
-              >
-              <a
-                href="https://staged.substack.com/"
-                target="_new"
-                class="btn btn-lg btn-outline-primary m-3"
-                >Monthly Newsletter</a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-3">
-          <div class="card my-3 border border-primary">
-            <div class="card-body d-flex flex-column align-items-center">
-              <h3 class="card-title">Card Games</h3>
-              <a
-                href="http://www.teamaretuza.com"
-                target="_new"
-                class="btn btn-lg btn-outline-primary m-3"
-                >Team Aretuza</a
-              >
-              <a
-                href="https://www.youtube.com/channel/UC44eL9HtZ9NCb78s4rebvbA"
-                target="_new"
-                class="btn btn-lg btn-outline-primary m-3"
-                >YouTube Channel</a
               >
             </div>
           </div>
